refact: окно user popup по БЭМ

--- a/index.html
+++ b/index.html
@@ -38,14 +38,14 @@
       </div>
       </template>
     </section>
-      <div class="popup popup__user">
-        <button class="popup__user_close-icone" type="button"></button>
-        <div class="popup__container">
-          <form class="popup__user_form" name="form_1">
-            <h2 class="popup__title">Редактировать профиль</h2>
-            <input class="popup__user_name-input" type="text" name="firstname" placeholder="Жак-Ив Кусто">
-            <input class="popup__user_description-input" type="text" name="description" placeholder="Исследователь океана">
-            <button class="popup__submit-button popup__submit-button_active" type="submit" value="Сохранить">Сохранить</button>
+      <div class="popup popup_user">
+        <button class="popup_user-close-icone" type="button"></button>
+        <div class="popup__container-form">
+          <form class="popup__container-form_user-form" name="form_1">
+            <h2 class="popup__container-form-title">Редактировать профиль</h2>
+            <input class="popup__container-form-input_user-name" type="text" name="firstname" placeholder="Жак-Ив Кусто">
+            <input class="popup__container-form-input_user-description" type="text" name="description" placeholder="Исследователь океана">
+            <button class="popup__container-form-submit-button popup__container-form-submit-button_active" type="submit" value="Сохранить">Сохранить</button>
           </form>
         </div>
       </div>
