refact: popup user по БЭМ

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       </div>
       </template>
     </section>
-      <div class="popup popup_user">
+      <div class="popup popup_type_user">
         <button class="popup_user-close-icone" type="button"></button>
         <div class="popup__container-form">
           <form class="popup__container-form_user-form" name="form_1">
