рефакторинг popup по БЭМ

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       </template>
     </section>
       <div class="popup popup_type_user">
-        <button class="popup_user-close-icone" type="button"></button>
+        <button class="popup_user_close-icone" type="button"></button>
         <div class="popup__container-form">
           <form class="popup__container-form_user-form" name="form_1">
             <h2 class="popup__container-form-title">Редактировать профиль</h2>
