--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
       <div class="popup popup_type_user">
         <button class="popup__user-close-icone" type="button"></button>
         <div class="popup__container-form">
-          <form class="popup__container-form_user-form" name="form_1">
+          <form class="popup__user-form" name="form_1">
             <h2 class="popup__container-form-title">Редактировать профиль</h2>
             <input class="popup__container-form-input_user-name" type="text" name="firstname" placeholder="Жак-Ив Кусто">
             <input class="popup__container-form-input_user-description" type="text" name="description" placeholder="Исследователь океана">
