--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <div class="popup__container-form">
           <form class="popup__user-form" name="form_1">
             <h2 class="popup__container-form-title">Редактировать профиль</h2>
-            <input class="popup__container-form-input_user-name" type="text" name="firstname" placeholder="Жак-Ив Кусто">
+            <input class="popup__container-form-input popup__container-form-input_user-name" type="text" name="firstname" placeholder="Жак-Ив Кусто">
             <input class="popup__container-form-input_user-description" type="text" name="description" placeholder="Исследователь океана">
             <button class="popup__container-form-submit-button popup__container-form-submit-button_active" type="submit" value="Сохранить">Сохранить</button>
           </form>
