refact: popup user+place по БЭМ

--- a/index.html
+++ b/index.html
@@ -44,19 +44,19 @@
           <form class="popup__user-form" name="form_1">
             <h2 class="popup__container-form-title">Редактировать профиль</h2>
             <input class="popup__container-form-input popup__container-form-input_user-name" type="text" name="firstname" placeholder="Жак-Ив Кусто">
-            <input class="popup__container-form-input_user-description" type="text" name="description" placeholder="Исследователь океана">
+            <input class="popup__container-form-input popup__container-form-input_user-description" type="text" name="description" placeholder="Исследователь океана">
             <button class="popup__container-form-submit-button popup__container-form-submit-button_active" type="submit" value="Сохранить">Сохранить</button>
           </form>
         </div>
       </div>
-      <div class="popup popup_place">
-        <button class="popup_place-close-icone" type="button"></button>
-        <div class="popup__container">
-          <form class="popup_place-form" id="addUserCard" name="form_2">
-            <h2 class="popup__title">Новое место</h2>
-            <input class="popup_place_location-input" type="text" name="user-place" placeholder="Название">
-            <input class="popup_place_link-input" type="text" name="link-image" placeholder="Ссылка на картинку">
-            <button class="popup__submit-button" type="submit" value="Сохранить">Создать</button>
+      <div class="popup popup_type_place">
+        <button class="popup__place-close-icone" type="button"></button>
+        <div class="popup__container-form">
+          <form class="popup__place-form" name="form_2">
+            <h2 class="popup__container-form-title">Новое место</h2>
+            <input class="popup__container-form-input popup__container-form-input_location" type="text" name="user-place" placeholder="Название">
+            <input class="popup__container-form-input popup__container-form-input_link" type="text" name="link-image" placeholder="Ссылка на картинку">
+            <button class="popup__container-form-submit-button" type="submit" value="Сохранить">Создать</button>
           </form>
         </div>
       </div>
