refact: popup user+place+gallery по БЭМ

--- a/index.html
+++ b/index.html
@@ -60,11 +60,11 @@
           </form>
         </div>
       </div>
-      <div class="popup popup_gallery">
-        <div class="popup_gallery-container">
-          <button class="popup_gallery-close-icone" type="button"></button>
-          <img class="popup_gallery-image" src="//:0" alt="">
-          <p class="popup_gallery-description"></p>
+      <div class="popup popup_type_gallery">
+        <div class="popup__gallery-container">
+          <button class="popup__gallery-close-icone" type="button"></button>
+          <img class="popup__gallery-image" src="//:0" alt="">
+          <p class="popup__gallery-description"></p>
         </div>
       </div>
     </main>
