feat: закрытие popup при клике на overlay

--- a/index.html
+++ b/index.html
@@ -44,9 +44,9 @@
         <div class="popup__container-form">
           <form class="popup__form popup__user-form" name="form_1" novalidate>
             <h2 class="popup__container-form-title">Редактировать профиль</h2>
-            <input id="name-input" class="popup__container-form-input popup__container-form-input_user-name" type="text" name="firstname" placeholder="Жак-Ив Кусто" minlenght="2" maxlength="40" required>
+            <input id="name-input" class="popup__container-form-input popup__container-form-input_user-name" type="text" name="firstname" placeholder="Жак-Ив Кусто" minlength="2" maxlength="40" required>
             <span class="name-input-error popup__error"></span>
-            <input id="description-input" class="popup__container-form-input popup__container-form-input_user-description" type="text" name="description" placeholder="Исследователь океана" minlenght="2" maxlength="200" required>
+            <input id="description-input" class="popup__container-form-input popup__container-form-input_user-description" type="text" name="description" placeholder="Исследователь океана" minlength="2" maxlength="200" required>
             <span class="description-input-error popup__error"></span>
             <button class="popup__container-form-submit-button popup__container-form-submit-button_active" type="submit" value="Сохранить">Сохранить</button>
           </form>
@@ -58,7 +58,7 @@
         <div class="popup__container-form">
           <form class="popup__form popup__place-form" name="form_2" novalidate>
             <h2 class="popup__container-form-title">Новое место</h2>
-            <input id="location-input" class="popup__container-form-input popup__container-form-input_location" type="text" name="user-place" placeholder="Название" minlenght="2" maxlength="30" required>
+            <input id="location-input" class="popup__container-form-input popup__container-form-input_location" type="text" name="user-place" placeholder="Название" minlength="2" maxlength="30" required>
             <span class="location-input-error popup__error"></span>
             <input id="link-input" class="popup__container-form-input popup__container-form-input_link" name="link-image" placeholder="Ссылка на картинку" type="url" required>
             <span class="link-input-error popup__error"></span>
