код ревью: рефакторинг функций открытия-закрытия popup, некоторые мелочи

--- a/index.html
+++ b/index.html
@@ -39,10 +39,9 @@
       </template>
     </section>
       <div class="popup popup_type_user">
-
         <button class="popup__user-close-icone" type="button"></button>
         <div class="popup__container-form">
-          <form class="popup__form popup__user-form" name="form_1" novalidate>
+          <form class="popup__form popup__user-form" name="user-profile" novalidate>
             <h2 class="popup__container-form-title">Редактировать профиль</h2>
             <input id="name-input" class="popup__container-form-input popup__container-form-input_user-name" type="text" name="firstname" placeholder="Жак-Ив Кусто" minlength="2" maxlength="40" required>
             <span class="name-input-error popup__error"></span>
@@ -53,10 +52,9 @@
         </div>
       </div>
       <div class="popup popup_type_place">
-
         <button class="popup__place-close-icone" type="button"></button>
         <div class="popup__container-form">
-          <form class="popup__form popup__place-form" name="form_2" novalidate>
+          <form class="popup__form popup__place-form" name="user-location" novalidate>
             <h2 class="popup__container-form-title">Новое место</h2>
             <input id="location-input" class="popup__container-form-input popup__container-form-input_location" type="text" name="user-place" placeholder="Название" minlength="2" maxlength="30" required>
             <span class="location-input-error popup__error"></span>
