fix: доработка подтверждения формы, убрать лишние граф.элементы

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
             <span class="location-input-error popup__error"></span>
             <input id="link-input" class="popup__container-form-input popup__container-form-input_link" name="link-image" placeholder="Ссылка на картинку" type="url" required>
             <span class="link-input-error popup__error"></span>
-            <button class="popup__container-form-submit-button" type="submit" value="Сохранить">Создать</button>
+            <button class="popup__container-form-submit-button popup__container-form-submit-button_type_place" type="submit" value="Сохранить">Создать</button>
           </form>
         </div>
       </div>
