--- a/index.html
+++ b/index.html
@@ -76,10 +76,8 @@
     <p class="footer__copyright">&copy; 2022 Mesto Russia</p>
   </footer>
   </div>
-  <script src="scripts/cards.js"></script>
-  <script src="scripts/validate.js"></script>
-  <script src="scripts/script.js"></script>
-
-
+  <script type="module" src="scripts/Card.js"></script>
+  <script type="module" src="scripts/FormValidator.js"></script>
+  <script type="module" src="scripts/index.js"></script>
 </body>
 </html>
