--- a/index.html
+++ b/index.html
@@ -8,19 +8,6 @@
     <title>Mesto</title>
   </head>
   <body>
-    <template id="placeCard">
-      <div class="card">
-        <img class="card__image" src="//:0" alt=" " />
-        <button class="card__delete-button" type="button" id="delete-button">
-          <img src="images/Trash.svg" alt="удалить" />
-        </button>
-        <div class="card__description">
-          <h2 class="card__title"></h2>
-          <button class="card__like-button" type="button"></button>
-        </div>
-      </div>
-    </template>
-
     <div class="page">
       <header class="header">
         <img
@@ -45,7 +32,6 @@
           </div>
           <button class="profile__add-button" type="button"></button>
         </section>
-
         <section class="photo-grid"></section>
         <div class="popup popup_type_user">
           <button class="popup__user-close-icone" type="button"></button>
@@ -139,9 +125,22 @@
         <p class="footer__copyright">&copy; 2022 Mesto Russia</p>
       </footer>
     </div>
-    <script type="module" src="scripts/utils.js"></script>
-    <script type="module" src="scripts/index.js"></script>
+    <template id="placeCard">
+      <div class="card">
+        <img class="card__image" src="//:0" alt=" " />
+        <button class="card__delete-button" type="button" id="delete-button">
+          <img src="images/Trash.svg" alt="удалить" />
+        </button>
+        <div class="card__description">
+          <h2 class="card__title"></h2>
+          <button class="card__like-button" type="button"></button>
+        </div>
+      </div>
+    </template>
+    <script type="module" src="scripts/constants.js"></script>
     <script type="module" src="scripts/FormValidator.js"></script>
     <script type="module" src="scripts/Card.js"></script>
+    <script type="module" src="scripts/index.js"></script>
+    <script type="module" src="scripts/utils.js"></script>
   </body>
 </html>
