refact: правки после второго ревью

--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
       <header class="header">
         <img
           class="header__group-logo"
-          src="<%=require('./../images/logo.svg')%>"
+          src="<%=require('./images/logo.svg')%>"
           alt="логотип сайта место"
         />
       </header>
@@ -19,7 +19,7 @@
         <section class="profile">
           <img
             class="profile__avatar"
-            src="<%=require('./../images/Avatar.jpg')%>"
+            src="<%=require('./images/Avatar.jpg')%>"
             alt="аватар автора блога"
           />
           <div class="profile__info">
@@ -128,7 +128,7 @@
       <div class="card">
         <img class="card__image" src="//:0" alt=" " />
         <button class="card__delete-button" type="button" id="delete-button">
-          <img src="<%=require('./../images/Trash.svg')%>" alt="удалить" />
+          <img src="<%=require('./images/Trash.svg')%>" alt="удалить" />
         </button>
         <div class="card__description">
           <h2 class="card__title"></h2>
