feat: добавление окна delete

--- a/src/index.html
+++ b/src/index.html
@@ -119,6 +119,22 @@
             <p class="popup__gallery-description"></p>
           </div>
         </div>
+        <div class="popup popup_type_delete popup_on">
+          <button class="popup__delete-close-icone popup__close-icone" type="button"></button>
+          <div class="popup__container-form">
+            <form
+            class="popup__form popup__delete-form"
+            name="confirm-delete">
+            <h2 class="popup__container-form-title">Вы уверены?</h2>
+            <button
+                class="popup__container-form-submit-button popup__container-form-submit-button_type_delete"
+                type="submit"
+                value="Да">
+                Да
+              </button>
+            </form>
+          </div>
+        </div>
       </main>
       <footer class="footer">
         <p class="footer__copyright">&copy; 2022 Mesto Russia</p>
