--- a/src/index.html
+++ b/src/index.html
@@ -119,7 +119,7 @@
             <p class="popup__gallery-description"></p>
           </div>
         </div>
-        <div class="popup popup_type_delete popup_on">
+        <div class="popup popup_type_delete">
           <button class="popup__delete-close-icone popup__close-icone" type="button"></button>
           <div class="popup__container-form">
             <form
@@ -131,6 +131,33 @@
                 type="submit"
                 value="Да">
                 Да
+              </button>
+            </form>
+          </div>
+        </div>
+        <div class="popup popup_type_avatar popup_on">
+          <button class="popup__avatar-close-icone popup__close-icone" type="button"></button>
+          <div class="popup__container-form">
+            <form
+            class="popup__form popup__avatar-form"
+            name="confirm-avatar">
+            <h2 class="popup__container-form-title">Обновить аватар</h2>
+            <input
+            id="avatar-input"
+            class="popup__container-form-input popup__container-form-input_avatar"
+            type="url"
+            name="avatar-change"
+            placeholder="Введите URL"
+            minlength="2"
+            maxlength="30"
+            required
+          />
+            <span class="avatar-input-error popup__error"></span>
+            <button
+                class="popup__container-form-submit-button popup__container-form-submit-button_type_avatar"
+                type="submit"
+                value="Сохранить">
+                Сохранить
               </button>
             </form>
           </div>
