refact: правильные запросы в Api, добавить/удалить лайк, порядок в index

--- a/src/index.html
+++ b/src/index.html
@@ -128,7 +128,8 @@
           <div class="popup__container-form">
             <form
             class="popup__form popup__delete-form"
-            name="delete">
+            name="delete"
+            novalidate>
             <h2 class="popup__container-form-title">Вы уверены?</h2>
             <button
                 class="popup__container-form-submit-button popup__container-form-submit-button_type_delete"
