feat: отправка на ревью

--- a/src/index.html
+++ b/src/index.html
@@ -19,9 +19,9 @@
         <section class="profile">
 
           <div class="profile__avatar">
-            <div class="profile__avatar_overlay"></div>
+            <div class="profile__avatar-overlay"></div>
             <img
-            class="profile__avatar_picture"
+            class="profile__avatar-picture"
             src="<%=require('./images/Avatar.jpg')%>"
             alt="аватар автора блога"
           />
